--- a/Ejercicios/ARKAITGARRO-COM-Capitulo18/index.html
+++ b/Ejercicios/ARKAITGARRO-COM-Capitulo18/index.html
@@ -13,7 +13,8 @@
     <!-- <script type="module" src="scripts/14-funciones-dom.js" ></script>  -->
     <!-- <script type="module" src="scripts/17-toggle-elements.js" ></script>  -->
     <!-- <script type="module" src="scripts/18-info-raton-y-teclado.js" ></script>  -->
-    <script type="module" src="scripts/19-zona-pantallas-click.js" ></script> 
+    <!-- <script type="module" src="scripts/19-zona-pantallas-click.js" ></script>  -->
+    <script src="scripts/20-cronometro-setinterval.js" ></script> 
     <title>EJERCICIOS Arkaitzgarro.com/javascript/capitulo.18.html</title>
 </head>
 
@@ -106,5 +107,10 @@
 
     <!-- Ejercicio 19 -->
     <div id="info"></div>
+
+    <!-- Ejercicio 20 -->
+    <button id="btnIniciar" onclick="iniciar(event)">Iniciar</button>
+    <button id="btnParar"  onclick="parar(event)">Parar</button>
+    <h1 id="relogio"></h1>
 </body>
 </html>
