--- a/Ejemplos/05-DOM/index.html
+++ b/Ejemplos/05-DOM/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WEB APIs</title>
+  <title>Ejemplos DOM</title>
   <style>
     :root {
       --yellow-color: #F7DF1E;
