--- a/Ejercicios-Youtube/2-NIVEL-MEDIO/index-ejercicios-nivel-medio.html
+++ b/Ejercicios-Youtube/2-NIVEL-MEDIO/index-ejercicios-nivel-medio.html
@@ -25,11 +25,11 @@
       <li><a href="#section2">Eventos del teclado</a></li>
       <li><a href="#section3">Countdown</a></li>
       <li><a href="#section4">Responsive con JS</a></li>
-      <li><a href="#section5">Sección 5</a></li>
-      <li><a href="#section6">Sección 6</a></li>
-      <li><a href="#section7">Sección 7</a></li>
-      <li><a href="#section8">Sección 8</a></li>
-      <li><a href="#section9">Sección 9</a></li>
+      <li><a href="#section5">Responsive tester</a></li>
+      <li><a href="#section6">Detección dispositivos</a></li>
+      <li><a href="#section7">Status Network</a></li>
+      <li><a href="#section8">Detección camara web</a></li>
+      <li><a href="#section9">Geolocalización</a></li>
       <li><a href="#section10">Sección 10</a></li>
     </ul>
   </nav>
@@ -61,27 +61,48 @@
     </div>
     <div id="section3" class="seccion">
       <h1>Sección 3</h1>
+      <h3>Cuenta atrás</h3>
       <div id="countdown"></div>
     </div>
     <div id="section4" class="seccion">
       <h1>Sección 4</h1>
+      <h3>Responsive JS</h3>
       <div id="youtube"></div>
       <div id="gmaps"></div>
     </div>
     <div id="section5" class="seccion">
       <h1>Sección 5</h1>
+      <h3>Responsive tester</h3>
+      <form id="responsive-tester">
+        <input name="direccion" type="url" placeholder="URL" required>
+        <br>
+        <input name="ancho" type="number" placeholder="Ancho" required>
+        <br>
+        <input name="alto" type="number" placeholder="Alto" required>
+        <br><br>
+        <input name="probar" type="submit" value="Probar">
+        <input name="cerrar" type="button" value="Cerrar">
+      </form>
     </div>
     <div id="section6" class="seccion">
       <h1>Sección 6</h1>
+      <h3>Detección dispositivos<br>User Agent</h3>
+      <div id="user-device"></div>
     </div>
     <div id="section7" class="seccion">
       <h1>Sección 7</h1>
+      <h3>Status Network</h3>
     </div>
     <div id="section8" class="seccion">
       <h1>Sección 8</h1>
+      <h3>Detección camara web</h3>
+      <video id="webcam"></video>
     </div>
     <div id="section9" class="seccion">
       <h1>Sección 9</h1>
+      <h3>Geolocalización</h3>
+      <h5>Tu posición actual es:</h5>
+      <div id="geolocation"></div>
     </div>
     <div id="section10" class="seccion">
       <h1>Sección 10</h1>
