--- a/Ejemplos/08-Api-REST/index.html
+++ b/Ejemplos/08-Api-REST/index.html
@@ -53,8 +53,10 @@
   </section>
   
 <!-- <script src="js/01-api-rest-crud-ajax.js" type="text/javascript"></script> -->
-<script src="js/02-api-rest-crud-fetch-async-await.js" type="text/javascript"></script>
-<!-- <script src="js/03-api-rest-crud-axios.js" type="text/javascript"></script> -->
+<!-- <script src="js/02-api-rest-crud-fetch-async-await.js" type="text/javascript"></script> -->
+
+<script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+<script src="js/03-api-rest-crud-axios.js" type="text/javascript"></script>
 </body>
 
 </html>
