Envípo de formulario AJAX PHP

--- a/Ejercicios-Youtube/3-AJAX/06-envio-formulario-AJAX-PHP/index.html
+++ b/Ejercicios-Youtube/3-AJAX/06-envio-formulario-AJAX-PHP/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Envío de formulario con AJAX - FormSubmit API</title>
+    <title>Envío de formulario con AJAX - PHP</title>
 </head>
 
 <body>
-    <h1>Envío de formulario con AJAX - FormSubmit API</h1>
+    <h1>Envío de formulario con AJAX - PHP</h1>
     <form class="contact-form">
         <legend>Envíanos tus comentarios</legend>
         <input type="text" name="name" placeholder="Escribe tu nombre"
