--- a/Proyectos/6-MUSIC-MP3-PLAYER/index.html
+++ b/Proyectos/6-MUSIC-MP3-PLAYER/index.html
@@ -23,7 +23,7 @@
                     <div class="bar8"></div>
                     <div class="bar9"></div>
                 </div>
-                <span class="actual-time hide">00:00</span>
+                <span class="actual-time">00:00</span>
                 <span class="total-time"></span>
             </section>
             <section id="controls-box">
@@ -43,6 +43,6 @@
     </main>
     
 
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main-refact.js"></script>
   </body>
 </html>
