--- a/Proyectos/6-MUSIC-MP3-PLAYER/index.html
+++ b/Proyectos/6-MUSIC-MP3-PLAYER/index.html
@@ -43,6 +43,6 @@
     </main>
     
 
-    <script src="scripts/main-refact.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
